--- a/vss_proj/templates/login.html
+++ b/vss_proj/templates/login.html
@@ -51,20 +51,22 @@
       <p class="text-muted">Please enter your details to sign in.</p>
     </div>
 
-    <form>
-      <div class="mb-3">
-        <label class="form-label">Username</label>
-        <input type="text" class="form-control" placeholder="Enter your username">
-      </div>
+    <form method="POST" action="{% url 'user_dashboard' %}">
+        {% csrf_token %}
+        
+        <div class="mb-3">
+          <label class="form-label">Username</label>
+          <input type="text" name="username" class="form-control" placeholder="Enter your username" required>
+        </div>
 
-      <div class="mb-4">
-        <label class="form-label">Password</label>
-        <input type="password" class="form-control" placeholder="Enter your password">
-      </div>
+        <div class="mb-4">
+          <label class="form-label">Password</label>
+          <input type="password" name="password" class="form-control" placeholder="Enter your password" required>
+        </div>
 
-      <button type="submit" class="btn btn-primary w-100">Login</button>
+        <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
-
+    
     <p class="text-center mt-4 signup-link">
       Don't have an account?
       <a href="user_register" class="text-primary fw-semibold">Sign up</a>
