--- a/vss_proj/templates/login.html
+++ b/vss_proj/templates/login.html
@@ -50,26 +50,36 @@
       <h2 class="fw-bold">Welcome Back</h2>
       <p class="text-muted">Please enter your details to sign in.</p>
     </div>
-
-    <form method="POST" action="{% url 'user_dashboard' %}">
+    <form method="POST" action="{% url 'login_page' %}">
         {% csrf_token %}
-        
+
+        {% if messages %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {% for message in messages %}
+                {{ message }}
+            {% endfor %}
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        </div>
+        {% endif %}
+
+
         <div class="mb-3">
-          <label class="form-label">Username</label>
-          <input type="text" name="username" class="form-control" placeholder="Enter your username" required>
+            <label class="form-label">Username</label>
+            <input type="text" name="username" class="form-control" required>
         </div>
 
         <div class="mb-4">
-          <label class="form-label">Password</label>
-          <input type="password" name="password" class="form-control" placeholder="Enter your password" required>
+            <label class="form-label">Password</label>
+            <input type="password" name="password" class="form-control" required>
         </div>
 
         <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
+
     
     <p class="text-center mt-4 signup-link">
       Don't have an account?
-      <a href="user_register" class="text-primary fw-semibold">Sign up</a>
+      <a href="{% url 'user_register' %}" class="text-primary fw-semibold">Sign up</a>
     </p>
 
   </div>
